--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,6 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
-    "@material-ui/core": "^4.9.1",
     "@popperjs/core": "^2.0.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -19,8 +18,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
-    "reactstrap": "^8.4.1",
-    "scss": "^0.2.4"
+    "reactstrap": "^8.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
