--- a/amplify.yml
+++ b/amplify.yml
@@ -11,7 +11,7 @@ frontend:
         -yarn run build
   artifacts:
     # IMPORTANT - Please verify your build output directory
-    baseDirectory: /client/build
+    baseDirectory: client/build
     files:
       - '**/*'
   cache:
