--- a/amplify.yml
+++ b/amplify.yml
@@ -8,10 +8,11 @@ frontend:
     # IMPORTANT - Please verify your build commands
     build:
       commands: 
-        -yarn run build
+        - yarn run build
+
   artifacts:
     # IMPORTANT - Please verify your build output directory
-    baseDirectory: /client/src
+    baseDirectory: /client/build
     files:
       - '**/*'
   cache:
